--- a/checkpoint2/requirements.txt
+++ b/checkpoint2/requirements.txt
@@ -9,6 +9,9 @@ Django==1.8.6
 django-filter==0.11.0
 django-toolbelt==0.0.1
 djangorestframework==3.3.1
+Factory==1.2
+fake-factory==0.5.3
+Faker==0.0.4
 Flask==0.10.1
 Flask-API==0.6.4
 Flask-AppBuilder==1.6.0
@@ -17,6 +20,7 @@ Flask-HTTPAuth==2.7.0
 Flask-Login==0.2.11
 Flask-Migrate==1.6.0
 Flask-OpenID==1.2.5
+flask-paginate==0.4.1
 Flask-RESTful==0.3.4
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
@@ -36,6 +40,7 @@ pytz==2015.7
 six==1.10.0
 speaklater==1.3
 SQLAlchemy==1.0.9
+SQLAlchemy-Paginator==0.1
 static3==0.6.1
 Werkzeug==0.11.2
 wheel==0.24.0
